@@ -1,6 +1,7 @@
-#!/bin/bash
-set -e
-export MAVEN_OPTS="-Xmx4096m -XX:MetaspaceSize=1024m -Djdk.attach.allowAttachSelf=true ${MAVEN_OPTS}"
+#!/bin/bash -xe
+
+export MAVEN_OPTS="-Xms256m -Xmx512m -XX:MetaspaceSize=96m -XX:MaxMetaspaceSize=128m ${MAVEN_OPTS}"
+
 source ${BASH_SOURCE%/*}/common.sh
 
 call-mvn test -s $MVN_SETTINGS -Pci -U "$@"
